# nte-dps-toolkit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  NOTICE.md  NTE_交互系统优化方案.md  NTE_封包解析算法.md  README.md  README_EN.md  THIRD_PARTY_LICENSES.md  build.rs  characters.json  future_plan.md  to_dolist.md
.github/workflows/: build.yml
Dumper-7/5.6.1-0+UE5-HT/CppSDK/: NameCollisions.inl  PropertyFixup.hpp  SDK.hpp
Dumper-7/5.6.1-0+UE5-HT/CppSDK/SDK/: ACLPlugin_classes.hpp  ACLPlugin_functions.cpp  ACLPlugin_parameters.hpp  AIModule_classes.hpp  AIModule_functions.cpp  AIModule_parameters.hpp  AIModule_structs.hpp  ActorSequence_classes.hpp  ActorSequence_functions.cpp  ActorSequence_structs.hpp  AkAudio_classes.hpp  AkAudio_functions.cpp  AkAudio_parameters.hpp  AkAudio_structs.hpp  AndroidPermission_functions.cpp  AnimGraphRuntime_classes.hpp  AnimGraphRuntime_functions.cpp  AnimGraphRuntime_parameters.hpp  AnimGraphRuntime_structs.hpp  AnimToTexture_classes.hpp  AnimationBudgetAllocator_classes.hpp  AnimationCore_structs.hpp  AnimationLocomotionLibraryRuntime_functions.cpp  AnimationLocomotionLibraryRuntime_parameters.hpp  AnimationSharing_classes.hpp  AnimationSharing_functions.cpp  AnimationSharing_parameters.hpp  AnimationSharing_structs.hpp  AnimationWarpingRuntime_classes.hpp  AnimationWarpingRuntime_functions.cpp  AnimationWarpingRuntime_parameters.hpp  AnimationWarpingRuntime_structs.hpp  AppleImageUtils_classes.hpp  AppleImageUtils_parameters.hpp  ArchVisCharacter_classes.hpp  AssetRegistry_classes.hpp  AssetRegistry_functions.cpp  AssetRegistry_parameters.hpp  AssetTags_functions.cpp  AudioCapture_classes.hpp  (+1014 more)
Dumper-7/5.6.1-0+UE5-HT/Dumpspace/: EnumsInfo.json  OffsetsInfo.json  StructsInfo.json
Dumper-7/5.6.1-0+UE5-HT/IDAMappings/: 5.6.1-0+UE5-HT.idmap
deploy/: DEPLOY.md  nginx-dps.o-na-ni.com.conf
docs/: CLI_PROTOCOL.md  CLI_PROTOCOL_ZH.md  packet_content_parser_v2.md
docs/examples/: nte_core_client.py
licenses/: material_symbols-LICENSE-APACHE-2.0.txt
native/nte-equipment-plugin/: .gitignore  README.md  nte-equipment-plugin.sln  nte-equipment-plugin.vcxproj
native/nte-equipment-plugin/include/: nte_equipment_ipc.h
native/nte-equipment-plugin/src/: dwmapi.def  dwmapi_exports.inc  dwmapi_proxy.cpp  dwmapi_proxy.hpp  dwmapi_stubs.asm  equipment_rpc.cpp  equipment_rpc.hpp  ipc_transport.cpp  ipc_transport.hpp  memory_access.cpp  memory_access.hpp  nte_equipment_plugin.cpp  obfuscated_string.cpp  obfuscated_string.hpp  offset_resolver.cpp  offset_resolver.hpp  plugin_runtime.cpp  plugin_runtime.hpp  runtime_shims.asm  shadow_vtable_hook.cpp  shadow_vtable_hook.hpp  viewport_hook_policy.hpp
plugins/: README.md
res/data/: asset_manifest.json  asset_report.json  core_manifest.json
res/data/abyss/: AbyssCloneLevelDataTable.json  DT_AbyssMonsterPool.json  DT_MonsterPackData.json  DT_MonsterStaticData_Abyss.json  abyss_floor_monster_summary.json  abyss_monsters.json  monster_stat_names_zh_cn.json  season_names_zh_cn.json
res/data/characters/: characters.json
res/data/equipment/: equipment.json
res/data/reactions/: reactions.json
res/data/skills/: ability_tips.json  gameplay_effect_mapping.json  skill_damage.json  ultra_time_stop.json  wooden_damage_descriptions.json
res/languages/: ja.json  zh-CN.json
scripts/: verify_architecture.ps1
site/: index.html  robots.txt  sitemap.xml
src/: abyss_data.rs  app.rs  capture.rs  character_editor.rs  config.rs  diagnostics.rs  history.rs  hotkey.rs  lib.rs  main.rs  model.rs  net_identity.rs  network.rs  object_state.rs  parser.rs  protocol.rs  resource.rs  resource_audit.rs  resource_index.rs  runtime_handle.rs  target_alias.rs  target_fact.rs  target_instance.rs  target_lock.rs  target_resolver.rs  target_stream.rs  target_track.rs  ue_bitstream.rs  window_attributes.rs
src/api/: dto.rs  jsonrpc.rs  mod.rs  request.rs  response.rs
src/app/: abyss.rs  chrome.rs  commands.rs  console_view.rs  detail_panels.rs  diagnostics_ui.rs  editor.rs  history_ui.rs  hit_detail.rs  hud.rs  island.rs  kongmu.rs  lifecycle.rs  main_view.rs  mod.rs  motion.rs  resources.rs  theme.rs  timeline.rs  update.rs
src/cli/: args.rs  mod.rs  stdio.rs
src/core/: capture.rs  mod.rs  reducer.rs  snapshot.rs  update.rs
src/engine/: abyss_data.rs  capture.rs  mod.rs  model.rs  parser.rs  protocol.rs  rich_text.rs
src/platform/: equipment_plugin.rs  file_drop.rs  hotkey.rs  locale.rs  mod.rs  network.rs  update_http.rs  update_install.rs  window_attributes.rs
src/storage/: ability_names.rs  capture_logs.rs  config.rs  history.rs  i18n.rs  io_util.rs  mod.rs  paths.rs  resource.rs  update.rs
src/support/: character_editor.rs  diagnostics.rs  encrypted_ini.rs  mod.rs  resource_audit.rs
tools/: README.md  analyze_nte_ini.py  export_nte_res.py  generate_ultra_time_stop_table.py  nte_asset_pipeline.py  pyproject.toml  unpack_nte_reslist.py
tools/cue4parse_probe/: Program.cs
