[package]
name = "nte-dps-tool"
version = "0.1.0"
edition = "2024"
description = "Local Windows DPS diagnostics tool for NTE."
repository = "https://github.com/kongbaiz/NTE_DPS_TOOL"
license = "PolyForm-Noncommercial-1.0.0"

[features]
default = []
no_debug = []

[dependencies]
anyhow = "1.0"
aes = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
crossbeam-channel = "0.5"
eframe = { version = "0.34.3", features = ["accesskit", "default_fonts", "glow"], default-features = false }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
libloading = "0.8"
pcap-file = "2.0"
raw-window-handle = "0.6"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
debug = false

[build-dependencies]
serde_json = "1.0"
winresource = "0.1.31"
